bk_ida/gccida/c0/expand_unop
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/optabs.c:2534:19: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  expand_unop( machine_mode mode, optab_0 unoptab, rtx op0, rtx target, int unsignedp) 
                  ^
                  enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/optabs.c:2534:38: error: unknown type name 'optab_0'; did you mean 'optab'?
rtx  expand_unop( machine_mode mode, optab_0 unoptab, rtx op0, rtx target, int unsignedp) 
                                     ^~~~~~~
                                     optab
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/optabs.h:48:5: note: 'optab' declared here
} * optab;
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/optabs.c:2541:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v10; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/optabs.c:2550:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v20; // [rsp+4Ch] [rbp-154h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/optabs.c:2551:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+8Ch] [rbp-114h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/optabs.c:2552:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v22; // [rsp+B0h] [rbp-F0h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/optabs.c:2558:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode submode; // [rsp+FCh] [rbp-A4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/optabs.c:2570:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode0; // [rsp+148h] [rbp-58h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/optabs.c:2576:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode wider_mode; // [rsp+16Ch] [rbp-34h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/optabs.c:2577:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode wider_modea; // [rsp+16Ch] [rbp-34h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/optabs.c:2578:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class classa; // [rsp+170h] [rbp-30h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/optabs.c:2582:10: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
classa = mode_class_0[mode]; 
         ^~~~~~~~~~~~
         mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/optabs.c:2591:34: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
mode0 = *( ( unsigned __int16 *)&insn_data_0[icode].operand[1] + 8); 
                                 ^~~~~~~~~~~
                                 insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/optabs.c:2599:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
if ( !insn_data_0[icode].operand[1].predicate( xop0, mode0) ) 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/optabs.c:2599:46: error: called object type '<dependent type>' is not a function or function pointer
if ( !insn_data_0[icode].operand[1].predicate( xop0, mode0) ) 
                                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/optabs.c:2601:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
if ( !insn_data_0[icode].operand->predicate( temp, mode) ) 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/optabs.c:2601:44: error: called object type '<dependent type>' is not a function or function pointer
if ( !insn_data_0[icode].operand->predicate( temp, mode) ) 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/optabs.c:2603:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
pat = insn_data_0[icode].genfun( temp, xop0); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/optabs.c:2603:32: error: called object type '<dependent type>' is not a function or function pointer
pat = insn_data_0[icode].genfun( temp, xop0); 
                               ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_unop/src/obj/optabs.o] Error 1
